--- a/templates/worldmap.html
+++ b/templates/worldmap.html
@@ -10,6 +10,38 @@ World Cup Stats
 = endblock
 
 = block content
+<ul class="nav nav-pills nav-fill navbar-light bg-light">
+<li class="nav-item">
+<a id="example1" class="nav-link active" href="javascript:void(0);">Population</a>
+</li>
+<li class="nav-item">
+<a id="example2" class="nav-link" href="javascript:void(0);">GDP</a>
+</li>
+<li class="nav-item">
+<a id="example3" class="nav-link" href="javascript:void(0);">Life Expectancy</a>
+</li>
+<li class="nav-item">
+<a id="example4" class="nav-link" href="javascript:void(0);">Urbanization Percentage</a>
+</li>
+<li class="nav-item">
+<a id="example5" class="nav-link" href="javascript:void(0);">Per Capita GDP</a>
+</li>
+<li class="nav-item">
+<a id="example6" class="nav-link" href="javascript:void(0);">Match Wins / 10 Million People</a>
+</li>
+<li class="nav-item">
+<a id="example7" class="nav-link" href="javascript:void(0);">Match Wins / GDP Scaled</a>
+</li>
+<li class="nav-item">
+<a id="example8" class="nav-link" href="javascript:void(0);">Match Wins / Life Expectancy</a>
+</li>
+<li class="nav-item">
+<a id="example9" class="nav-link" href="javascript:void(0);">Match Wins / Urbanization Percentage</a>
+</li>
+<li class="nav-item">
+<a id="example10" class="nav-link" href="javascript:void(0);">Match Wins / Per Capita GDP</a>
+</li>
+</ul>
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-8 col-md-8 main">
@@ -28,40 +60,6 @@ World Cup Stats
     </div>
       <div class="col-lg-4  col-md-4 col-sm-12">
         <div class="card card-outline-secondary">
-          <div class="card-header">
-          <ul class="nav nav-pills card-header-pills">
-          <li class="nav-item">
-          <a id="example1" class="nav-link active" href="javascript:void(0);">Population</a>
-          </li>
-          <li class="nav-item">
-          <a id="example2" class="nav-link" href="javascript:void(0);">GDP</a>
-          </li>
-          <li class="nav-item">
-          <a id="example3" class="nav-link" href="javascript:void(0);">Life Expectancy</a>
-          </li>
-          <li class="nav-item">
-          <a id="example4" class="nav-link" href="javascript:void(0);">Urbanization Percentage</a>
-          </li>
-          <li class="nav-item">
-          <a id="example5" class="nav-link" href="javascript:void(0);">Per Capita GDP</a>
-          </li>
-          <li class="nav-item">
-          <a id="example6" class="nav-link" href="javascript:void(0);">Match Wins / 10 Million People</a>
-          </li>
-          <li class="nav-item">
-          <a id="example7" class="nav-link" href="javascript:void(0);">Match Wins / GDP Scaled</a>
-          </li>
-          <li class="nav-item">
-          <a id="example8" class="nav-link" href="javascript:void(0);">Match Wins / Life Expectancy</a>
-          </li>
-          <li class="nav-item">
-          <a id="example9" class="nav-link" href="javascript:void(0);">Match Wins / Urbanization Percentage</a>
-          </li>
-          <li class="nav-item">
-          <a id="example10" class="nav-link" href="javascript:void(0);">Match Wins / Per Capita GDP</a>
-          </li>
-          </ul>
-          </div>
           <div class="card-block" style="height:500px;">
             <div class="container pt-3">
               <h3 class="text-center card-title">Country Information</h3>
